﻿v1.1.0

* Note
** This cycle of KBM is mainly for final updates for native Korean clients which will be running Rift 1.8 for some months
** English/French/German/Russian clients do not need to update. Although, there is no harm in doing so.
** KBM updates for Rift 1.9 will not start until Wed 27th June 2012, as the scope of KBM requires testing to be carried out on live servers.

Korean Translations
* On-going updates and fixes for Korean native client support.

----
v1.0.9

Version
* New: Alpha versions will now be signed with KBM.Alpha = true as opposed to KBM.Alpha = "rXXX"
* Change: KBM will now use a streamline version numbering system. All Release and Alpha candidates will include the following structure. High.Med.Low.Rev
* Note: With this change Alpha versions will be signified by a A: before the version and Release version by a R:
* Note: These changes will ensure that version update notifications in game will span over both release and alpha.

System
* Change: You will now receive version notifications for Release candidates over Alpha versions.
* Fixed: Notification messages were not triggering again after the timeout elapsed.

Castbars
* New: There is now a new Castbar Option for Rift/KBM style switching.
* New: Boss Castbars now default to a new Rift style. These bars show interruptible skills as cyan, otherwise they are gold.
* New: You may now choose to let KBM handle the player castbar.
* New: Player castbars handled by KBM can mimic the position of the Rift castbar. (You'll need to manually disable the Rift one for now)
* Change: The castbar rendering engine has be improved slightly to provide even greater performance!

Infernal Dawn
* Laethys
** New: Added Unit tracking for Wizened Stoneseer.
** New: Added Timer and Alert for Stoneseer's Wizened Restoration. (Personal - Target/Focus required)
** Change: Molten Gold is now a 30s damage based timer. (Feedback on accuracy and usefulness required)

Hammerknell Fortress
* Rune King Molinar