@@ -65,6 +65,7 @@ ES.Lang.Unit.Estrode = KBM.Language:Add(ES.Estrode.Name)
 ES.Lang.Unit.Estrode:SetGerman("Estrode")
 ES.Lang.Unit.Estrode:SetFrench("Estrode")
 ES.Lang.Unit.Estrode:SetRussian("Эстрода")
+ES.Lang.Unit.Estrode:SetKorean("에스트로드")
 ES.Estrode.Name = ES.Lang.Unit.Estrode[KBM.Lang]
 ES.Descript = ES.Estrode.Name
 
@@ -74,45 +75,50 @@ ES.Lang.Ability.Soul = KBM.Language:Add("Soul Capture")
 ES.Lang.Ability.Soul:SetGerman("Seelenfang")
 ES.Lang.Ability.Soul:SetRussian("Захват души")
 ES.Lang.Ability.Soul:SetFrench("Capture d'âme")
+ES.Lang.Ability.Soul:SetKorean("혼 포획")
 ES.Lang.Ability.Mind = KBM.Language:Add("Mind Control")
 ES.Lang.Ability.Mind:SetGerman("Gedankenkontrolle")
 ES.Lang.Ability.Mind:SetRussian("Контроль разума")
 ES.Lang.Ability.Mind:SetFrench("Volonté impérieuse")
+ES.Lang.Ability.Mind:SetKorean("마음의 동요")
 ES.Lang.Ability.Dancing = KBM.Language:Add("Dancing Steel")
 ES.Lang.Ability.Dancing:SetGerman("Tanzender Stahl")
 ES.Lang.Ability.Dancing:SetFrench("Dance de l'acier")
 ES.Lang.Ability.Dancing:SetRussian("Танцующая сталь")
+ES.Lang.Ability.Dancing:SetKorean("춤추는 검")
 ES.Lang.Ability.North = KBM.Language:Add("Rage of the North")
 ES.Lang.Ability.North:SetGerman("Wut des Nordens")
 ES.Lang.Ability.North:SetRussian("Ярость севера")
 ES.Lang.Ability.North:SetFrench("Rage du Nord")
+ES.Lang.Ability.North:SetKorean("북방의 분노")
 ES.Lang.Ability.Chastise = KBM.Language:Add("Chastise")
 ES.Lang.Ability.Chastise:SetGerman("Züchtigung")
 ES.Lang.Ability.Chastise:SetFrench("Châtiment")
+ES.Lang.Ability.Chastise:SetKorean("처벌")
 ES.Lang.Ability.Rift = KBM.Language:Add("Mistress of the Rift")
 ES.Lang.Ability.Rift:SetGerman("Herrin des Risses")
 ES.Lang.Ability.Rift:SetFrench("Avatar de la Faille")
-
+ES.Lang.Ability.Rift:SetKorean("리프트의 여군주")
 -- Debuff Dictionary
 ES.Lang.Debuff = {}
 ES.Lang.Debuff.Grasp = KBM.Language:Add("Neddra's Grasp")
 ES.Lang.Debuff.Grasp:SetGerman("Neddras Griff")
 ES.Lang.Debuff.Grasp:SetFrench("Poigne de Neddra")
-
+ES.Lang.Debuff.Grasp:SetKorean("네드라의 손아귀")
 -- Speak Dictionary
 ES.Lang.Say = {}
 ES.Lang.Say.Mind = KBM.Language:Add("Mmmm, you look delectable.")
 ES.Lang.Say.Mind:SetGerman("Hm, Ihr seht köstlich aus.")
 ES.Lang.Say.Mind:SetRussian("М-м-м, а ты выглядишь вкусно.")
 ES.Lang.Say.Mind:SetFrench("Hum, vous avez l'air délectable.")
-
+ES.Lang.Say.Mind:SetKorean("음, 너는 연약해 보이는군.")
 -- Menu Dictionary
 ES.Lang.Menu = {}
 ES.Lang.Menu.Dancing = KBM.Language:Add(ES.Lang.Ability.Dancing[KBM.Lang].." duration")
 ES.Lang.Menu.Dancing:SetGerman(ES.Lang.Ability.Dancing[KBM.Lang].." Dauer")
 ES.Lang.Menu.Dancing:SetRussian(ES.Lang.Ability.Dancing[KBM.Lang].." продолжительность")
 ES.Lang.Menu.Dancing:SetFrench(ES.Lang.Ability.Dancing[KBM.Lang].." durée")
-
+ES.Lang.Menu.Dancing:SetKorean("춤추는 검 지속")
 function ES:AddBosses(KBM_Boss)
 	self.MenuName = self.Descript
 	self.Bosses = {
