@@ -60,22 +60,26 @@ GU.Lang.Unit.Garau = KBM.Language:Add(GU.Garau.Name)
 GU.Lang.Unit.Garau:SetGerman("Inquisitor Garau")
 GU.Lang.Unit.Garau:SetFrench("Inquisiteur Garau")
 GU.Lang.Unit.Garau:SetRussian("Инквизитор Гарау")
+GU.Lang.Unit.Garau:SetKorean("인퀴지터 가라우")
 GU.Garau.Name = GU.Lang.Unit.Garau[KBM.Lang]
 GU.Descript = GU.Garau.Name
 GU.Lang.Unit.GarauShort = KBM.Language:Add("Garau")
 GU.Lang.Unit.GarauShort:SetGerman("Garau")
 GU.Lang.Unit.GarauShort:SetFrench("Garau")
 GU.Lang.Unit.GarauShort:SetRussian("Гарау")
+GU.Lang.Unit.GarauShort:SetKorean("가라우")
 GU.Garau.NameShort = GU.Lang.Unit.GarauShort[KBM.Lang]
 -- Addtional Unit Dictionary
 GU.Lang.Unit.Porter = KBM.Language:Add("Arcane Porter")
 GU.Lang.Unit.Porter:SetGerman("Arkane Torwache")
 GU.Lang.Unit.Porter:SetRussian("Привратник Магической Руки")
 GU.Lang.Unit.Porter:SetFrench("Arcaniste Noirflux")
+GU.Lang.Unit.Porter:SetKorean("비전 짐꾼")
 GU.Lang.Unit.Crawler = KBM.Language:Add("Infused Crawler")
 GU.Lang.Unit.Crawler:SetGerman("Durchdrungener Kriecher")
 GU.Lang.Unit.Crawler:SetRussian("Наполненный ползун")
 GU.Lang.Unit.Crawler:SetFrench("Rampant suintant")
+GU.Lang.Unit.Crawler:SetKorean("마력 깃든 크롤러")
 
 -- Ability Dictionary
 GU.Lang.Ability = {}
@@ -83,10 +87,12 @@ GU.Lang.Ability.Arcane = KBM.Language:Add("Arcane Essence")
 GU.Lang.Ability.Arcane:SetFrench("Syphon d'essence")
 GU.Lang.Ability.Arcane:SetGerman("Essenzabsauger")
 GU.Lang.Ability.Arcane:SetRussian("Насос сущности")
+GU.Lang.Ability.Arcane:SetKorean("비전 정수")
 GU.Lang.Ability.Blood = KBM.Language:Add("Bloodtide")
 GU.Lang.Ability.Blood:SetGerman("Blutflut")
 GU.Lang.Ability.Blood:SetRussian("Кровавая волна")
 GU.Lang.Ability.Blood:SetFrench("Raz-de-sang")
+GU.Lang.Ability.Blood:SetKorean("핏빛물결")
 
 -- Buff Dictionary
 GU.Lang.Buff = {}
@@ -94,6 +100,7 @@ GU.Lang.Buff.Shield = KBM.Language:Add("Glacial Shield")
 GU.Lang.Buff.Shield:SetGerman("Gletscherschild")
 GU.Lang.Buff.Shield:SetRussian("Ледниковый щит")
 GU.Lang.Buff.Shield:SetFrench("Bouclier glacial")
+GU.Lang.Buff.Shield:SetKorean("빙하 보호막")
 
 -- Speak Dictionary
 GU.Lang.Say = {}
@@ -105,6 +112,7 @@ GU.Lang.Say.Arcane = KBM.Language:Add("Inquisitor Garau siphons arcane essence f
 GU.Lang.Say.Arcane:SetFrench("Inquisiteur Garau siphonne l'essence occulte des ennemis à proximité !")
 GU.Lang.Say.Arcane:SetGerman("Inquisitor Garau saugt von Feinden in der Nähe arkane Essenz ab!")
 GU.Lang.Say.Arcane:SetRussian("Инквизитор Гарау высасывает магическую энергию из окружающих врагов!")
+GU.Lang.Say.Arcane:SetKorean("인퀴지터 가라우이(가) 근처에 있는 적으로부터 비전 정수를 흡입합니다!")
 GU.Lang.Say.Bask = KBM.Language:Add("Bask in the power of Akylios!")
 GU.Lang.Say.Bask:SetFrench("Savourez le pouvoir d'Akylios !")
 GU.Lang.Say.Bask:SetGerman("Preiset die Macht des Akylios!")
