@@ -10,7 +10,7 @@ Author = "Paul Snart"
 Website = "http://www.facebook.com/KingBossMods"
 Email = "snarty@gmail.com"
 
-Version = "1.1.0.434"
+Version = "1.1.0.435"
 
 Environment = "1.8"
 
